resources/dsaas-stg/dsaas-preview/che-plugin-registry.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    service: plugin-registry
  name: che-plugin-registry
spec:
  host: che-plugin-registry.prod-preview.openshift.io
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: plugin-registry
    weight: 100
  wildcardPolicy: None
